2.0.0-beta03
- Improved: Updated translations
- Fixed: Search field didn't appear after going back to stock or shopping list (#421)
- Fixed: Clipped text in changelog

2.0.0-beta02
- New: Almost all stock settings are now available (#395)
- Improved: Cleaner debugging settings page
- Improved: On consume page stock amount is used if barcode amount is bigger than stock (#357)
- Improved: Backup by Android system now is supported
- Improved: Updated translations
- Improved: All open-source licenses listed in about section
- Fixed: Crash on startup with some servers (#407)
- Fixed: Pressing 'done' on keyboard in amount field always started quick mode (#410)
- Fixed: Shopping list always displayed stock quantity unit and amount (#419)
- Fixed: Shopping list purchased wrong amount if item had not stock unit selected (#416)

2.0.0-beta01
- New: 'Purchase' actions on shopping list page are working again (#401)
- New: It is now possible to purchase only done shopping list items (#221)
- New: 'Add to shopping list' action on stock overview page is working again
- New: Quantity unit page now has field for plural forms if necessary (#348)
- Improved: 'Add shopping list item' page now has a better workflow
- Improved: Quick mode behavior now is better for amount field of forms
- Improved: Now you can add inventory and transfer page as shortcuts
- Improved: Display a warning if stock feature is disabled (#139)
- Improved: Actions in product overview bottom sheet are more reachable
- Improved: Few design tweaks on product overview sheet and in shopping mode
- Improved: Hide quantity unit field on shopping list item page if there is only one
- Improved: Add toggle in settings to reduce app startup time (disables logo animation)
- Improved: Stock overview and shopping list layout on tablets in portrait mode
- Improved: Updated translations
- Fixed: Menus were not displayed after first app start (#365)
- Fixed: Inactive products now cannot be added to shopping list (#398)